--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
     "@hapi/jwt": "^2.1.1",
+    "amqplib": "^0.10.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "joi": "^17.6.0",
@@ -24,6 +25,6 @@
   "devDependencies": {
     "eslint": "^8.17.0",
     "eslint-config-google": "^0.14.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^1.3.3"
   }
 }
