--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "joi": "^17.6.0",
     "nanoid": "^4.0.0",
     "node-pg-migrate": "^6.2.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "redis": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^8.17.0",
